--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </style>
 <body>
     <div>
-        <a href="clase01/index.html">Clase 01</a>
+        <a href="unidad02/">Unidad 2: Actividad Obligatoria</a>
         <br>
         <br>
         <a href="clase02/index.html">Clase 02</a>
-
+        <br>
+        <br>
+        <a href="clase01/index.html">Clase 01</a>
     </div>
 </body>
 </html>
