--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </style>
 <body>
     <div>
+        <a href="clase03/index.html">Clase 03</a>
+        <br>
+        <br>
         <a href="unidad02/">Unidad 2: Actividad Obligatoria</a>
         <br>
         <br>
